# matteros

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: INSTALL.md  audit-schema.md  connector-specs.md  policy-model.md  threat-model.md
matteros/: __init__.py  __main__.py  cli.py
matteros/config/: defaults.yml
matteros/connectors/: __init__.py  base.py  clio_sketch.py  csv_export.py  filesystem.py  github_connector.py  google_auth.py  google_calendar.py  (+9 more)
playbooks/: daily_time_capture.yml  daily_time_capture_google.yml
tests/: conftest.py  test_audit_verify.py  test_audit_verify_core.py  test_automation_loop.py  test_classify_matter.py  test_cli_audit_verify.py  test_cli_commands.py  test_cli_llm_doctor.py  test_cli_onboard.py  test_clio_sketch.py  test_config_connectors.py  test_connectors_new.py  test_daemon.py  test_daemon_runner.py  test_daemon_watcher_wiring.py  test_draft_events.py  test_drafts.py  test_event_bus.py  test_factory.py  test_google_auth.py  test_google_calendar.py  test_hardening.py  test_learning.py  test_llm_adapter_provider_controls.py  test_llm_providers_http.py  test_llm_providers_registry.py  test_llm_providers_vcr_contract.py  test_llm_task_registry.py  test_migrations.py  test_ms_graph_auth.py  test_narrative_polish.py  test_onboarding_config_migration.py  test_pattern_events.py  test_playbook_validation.py  test_plugin_sdk.py  test_policy_enforcement.py  test_prompt_injection_boundary.py  test_run_service.py  test_runner_approve_apply.py  test_runner_dry_run.py  (+14 more)
(+67 files in other folders)
